add base class for structure

--- a/FlowChart/FlowChart.csproj
+++ b/FlowChart/FlowChart.csproj
@@ -48,10 +48,12 @@
     <Compile Include="AllBlocks\EndBlock.cs" />
     <Compile Include="AllBlocks\ProcessBlock.cs" />
     <Compile Include="AllBlocks\StartBlock.cs" />
+    <Compile Include="Block.cs" />
     <Compile Include="BlocksFactory.cs" />
     <Compile Include="BlockTypes.cs" />
     <Compile Include="Chart.cs" />
     <Compile Include="IFlowChart.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
