--- a/Converters/Converters.csproj
+++ b/Converters/Converters.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FA704519-E0F2-497E-9B45-7E6D45E9E7EC}</ProjectGuid>
+    <ProjectGuid>{FF308B02-4A97-496D-AA01-14F53AC45F91}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ActionList</RootNamespace>
-    <AssemblyName>ActionList</AssemblyName>
+    <RootNamespace>Converters</RootNamespace>
+    <AssemblyName>Converters</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Desktop\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,7 +43,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="List.cs" />
+    <Compile Include="ActionListsConverters\AbstractConverterActionLists.cs" />
+    <Compile Include="ActionListsConverters\BinConverter.cs" />
+    <Compile Include="ActionListsConverters\GPBConverter.cs" />
+    <Compile Include="ActionListsConverters\IActionListsConverter.cs" />
+    <Compile Include="ActionListsConverters\JSONConverter.cs" />
+    <Compile Include="ActionListsConverters\MessagePackConverter.cs" />
+    <Compile Include="ActionListsConverters\SOAPConverter.cs" />
+    <Compile Include="ActionListsConverters\XMLConverter.cs" />
+    <Compile Include="ConverterTypes.cs" />
+    <Compile Include="FlowchartsConverters\AbstractConverterFlowcharts.cs" />
+    <Compile Include="FlowchartsConverters\BinConverter.cs" />
+    <Compile Include="FlowchartsConverters\GPBConverter.cs" />
+    <Compile Include="FlowchartsConverters\IFlowchartsConverter.cs" />
+    <Compile Include="FlowchartsConverters\JSONConverter.cs" />
+    <Compile Include="FlowchartsConverters\MessagePackConverter.cs" />
+    <Compile Include="FlowchartsConverters\SOAPConverter.cs" />
+    <Compile Include="FlowchartsConverters\XMLConverter.cs" />
+    <Compile Include="IConverter.cs" />
+    <Compile Include="Manufactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -47,6 +69,15 @@
       <Project>{f501bef7-5a55-43bc-910f-2be759829e0e}</Project>
       <Name>Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="SchemasOfFormats\FlowchartJSONScheme.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="SchemasOfFormats\FlowchartXMLSchema.xsd">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
