--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AL.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="BlockTypes.cs" />
     <Compile Include="Link.cs" />
