--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -58,6 +58,14 @@
       <Project>{fa704519-e0f2-497e-9b45-7e6d45e9e7ec}</Project>
       <Name>ActionList</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Converters\Converters.csproj">
+      <Project>{ff308b02-4a97-496d-aa01-14f53ac45f91}</Project>
+      <Name>Converters</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{f501bef7-5a55-43bc-910f-2be759829e0e}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FlowChart\FlowChart.csproj">
       <Project>{2056d778-7c95-4d69-8fab-935a39f16249}</Project>
       <Name>FlowChart</Name>
