--- a/Converters/Converters.csproj
+++ b/Converters/Converters.csproj
@@ -72,11 +72,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="SchemasOfFormats\FlowchartJSONScheme.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="SchemasOfFormats\FlowchartXMLSchema.xsd">
       <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
