--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Link.cs" />
     <Compile Include="LinkTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QDet.cs" />
+    <Compile Include="QTerm.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
