--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BlockTypes.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="LinkTypes.cs" />
+    <Compile Include="Operation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QDet.cs" />
     <Compile Include="QTerm.cs" />
