--- a/Q_Determinant/Q_Determinant.csproj
+++ b/Q_Determinant/Q_Determinant.csproj
@@ -57,10 +57,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Adapter.cs" />
+    <Compile Include="AlgorithmFile.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BlockUI.cs" />
+    <Compile Include="AlgorithmFolder.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
