--- a/Q_Determinant/Q_Determinant.csproj
+++ b/Q_Determinant/Q_Determinant.csproj
@@ -53,6 +53,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TabContent.cs" />
+    <Compile Include="TabContentWithCanvas.cs" />
+    <Compile Include="TabContentWithText.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
